--- a/src/styles/css/game.css
+++ b/src/styles/css/game.css
@@ -5,22 +5,6 @@
 .game-html {
   height: 100%;
   width: 100%;
-  font-size: 14px;
-}
-@media (min-width: 1241px) {
-  .game-html {
-    font-size: 16px;
-  }
-}
-@media (min-width: 1367px) {
-  .game-html {
-    font-size: 17px;
-  }
-}
-@media (min-width: 1801px) {
-  .game-html {
-    font-size: 18px;
-  }
 }
 .game-html .pocker_list {
   display: -webkit-box;
@@ -1156,6 +1140,10 @@
     border-radius: 5px;
   }
 }
+.game-html .group_tool.target_showdown,
+.game-html .group_user.target_showdown {
+  z-index: 9999;
+}
 .game-html .group_tool.user_active:not(.is-lose),
 .game-html .group_user.user_active:not(.is-lose) {
   z-index: 1;
@@ -1458,6 +1446,135 @@
   -ms-transform: translate(-50%, -50%) scale(1);
   transform: translate(-50%, -50%) scale(1);
   pointer-events: all;
+}
+.game-html .showdown {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 999;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  opacity: 0;
+  pointer-events: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.game-html .showdown .text-shadow {
+  font-style: italic;
+  text-transform: uppercase;
+  color: transparent;
+  -webkit-text-stroke: #fff;
+  -webkit-text-stroke-width: 1px;
+  text-shadow: 2px 2px 10px #2962ff;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  text-align: center;
+  font-size: 6vw;
+  font-weight: bold;
+}
+.game-html .showdown .wrap {
+  position: relative;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgba(41, 98, 255, 0)),
+    color-stop(rgba(15, 15, 15, 0.789)),
+    to(rgba(41, 98, 255, 0))
+  );
+  background-image: linear-gradient(
+    to right,
+    rgba(41, 98, 255, 0),
+    rgba(15, 15, 15, 0.789),
+    rgba(41, 98, 255, 0)
+  );
+  padding: 5%;
+}
+.game-html .showdown .wrap:before,
+.game-html .showdown .wrap:after {
+  position: absolute;
+  content: '';
+  height: 3px;
+  left: 0;
+  right: 0;
+  width: 0%;
+  -webkit-transition: all 1s;
+  transition: all 1s;
+  margin: auto;
+  background-image: -webkit-gradient(
+    linear,
+    left top,
+    right top,
+    from(rgba(41, 98, 255, 0)),
+    color-stop(rgb(41, 94, 239)),
+    to(rgba(41, 98, 255, 0))
+  );
+  background-image: linear-gradient(
+    to right,
+    rgba(41, 98, 255, 0),
+    rgb(41, 94, 239),
+    rgba(41, 98, 255, 0)
+  );
+}
+.game-html .showdown .wrap:before {
+  top: 0;
+}
+.game-html .showdown .wrap:after {
+  bottom: 0;
+}
+.game-html .showdown.show {
+  opacity: 1;
+  pointer-events: all;
+}
+.game-html .showdown.show .wrap:before,
+.game-html .showdown.show .wrap:after {
+  width: 100%;
+}
+.game-html .showdown.show .text-shadow {
+  -webkit-animation: flicker 0.5s ease-in-out 1 alternate;
+  animation: flicker 0.5s ease-in-out 1 alternate;
+}
+@-webkit-keyframes flicker {
+  0% {
+    opacity: 0.2;
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    letter-spacing: 3vw;
+    text-shadow: 2px 2px 10px #1b4cd3;
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    letter-spacing: 0;
+    text-shadow: 2px 2px 30px #2962ff;
+  }
+}
+@keyframes flicker {
+  0% {
+    opacity: 0.2;
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+    letter-spacing: 3vw;
+    text-shadow: 2px 2px 10px #1b4cd3;
+  }
+  100% {
+    opacity: 1;
+    -webkit-transform: scale(1);
+    transform: scale(1);
+    letter-spacing: 0;
+    text-shadow: 2px 2px 30px #2962ff;
+  }
 }
 .game-html .coin_bet {
   position: absolute;
@@ -2652,6 +2769,22 @@
   background-size: 100% 100%;
   overflow: hidden;
   height: 100%;
+  font-size: 14px;
+}
+@media (min-width: 1241px) {
+  .game-html .game {
+    font-size: 16px;
+  }
+}
+@media (min-width: 1367px) {
+  .game-html .game {
+    font-size: 17px;
+  }
+}
+@media (min-width: 1801px) {
+  .game-html .game {
+    font-size: 18px;
+  }
 }
 .game-html .game .inner_page {
   min-height: 100%;
@@ -2782,4 +2915,50 @@
     justify-content: center;
     gap: 4%;
   }
+}
+
+.table_statistical {
+  position: fixed;
+  right: 8px;
+  bottom: 8px;
+  -webkit-box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.3215686275);
+  box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.3215686275);
+  background: rgba(35, 35, 35, 0.6);
+  border: 1px solid #2d2d2d;
+  border-radius: 4px;
+  color: rgba(255, 255, 255, 0.6);
+  min-width: 220px;
+  font-size: 62.5%;
+  line-height: 12px;
+}
+@media (min-width: 1801px) {
+  .table_statistical {
+    min-width: 250px;
+    line-height: 14px;
+    font-size: 75%;
+  }
+}
+.table_statistical .ttl {
+  border-bottom: 1px solid #2d2d2d;
+  padding-bottom: 4px;
+  padding: 8px 16px;
+  color: #fff;
+}
+@media (min-width: 1801px) {
+  .table_statistical .ttl {
+    padding-bottom: 6px;
+  }
+}
+.table_statistical .content {
+  padding: 8px 16px;
+}
+.table_statistical dl {
+  margin-bottom: 0;
+}
+.table_statistical dl > * {
+  width: 33.33%;
+  margin-bottom: 0;
+}
+.table_statistical dl + dl {
+  margin-top: 8px;
 }
